# faster-unmixer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pyre_configuration  CITATION.cff  CMakeLists.txt  README.md  _funmixer_native.pyi  accum.py  cyth_scripts.c  cyth_scripts.pyx  fast_inversion_mwe.ipynb  faster-unmixer.cpp  geochem_inverse_optimize.py  inversion_fast_working.ipynb  optimise.ipynb  pyfastunmix.pyi  pyproject.toml  requirements.yaml  run.py  sample_network_unmix.py  setup.py  synthetic_test.py  unmix_continuous_mwe.py  unmix_mwe.py
data/: d8.asc  d8.nc  d8.tiff  d8_bad_bounds.tif  plot-test.sh  synthetic_topo_d8.asc
examples/: preprocessing.py  unmix_continuous_mwe.py  unmix_montecarlo_mwe.py  unmix_mwe.py  unmix_mwe2.py
funmixer/: __init__.py  cvxpy_extensions.py  d8processing.py  flow_acc_cfuncs.pyx  network_unmixer.py  sample_network_unmix.py
funmixer/native/: extension.cpp  faster-unmixer.cpp  faster-unmixer.hpp
src/: extension.cpp  faster-unmixer.cpp  faster-unmixer.hpp  main.cpp
tests/: julia_benchmark.jl  random_networks_test.py  runtime_benchmark.py  synthetic_test.py
